apache-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: apache
        image: httpd
        ports:
        - containerPort: 80
